--- a/discrete-machine-app/discrete-machine-app.csproj
+++ b/discrete-machine-app/discrete-machine-app.csproj
@@ -61,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\MachineAdapter.cs" />
     <Compile Include="Templates\ElementTemplate.xaml.cs">
       <DependentUpon>ElementTemplate.xaml</DependentUpon>
     </Compile>
@@ -82,7 +83,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\IElementDisplayDecorator.cs" />
+    <Compile Include="Model\IElementProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
