--- a/discrete-machine/discrete-machine.csproj
+++ b/discrete-machine/discrete-machine.csproj
@@ -44,9 +44,12 @@
     <Compile Include="Abstract\IOperation.cs" />
     <Compile Include="Connector.cs" />
     <Compile Include="Element.cs" />
+    <Compile Include="Elements\Counter.cs" />
+    <Compile Include="Elements\Disjunctor.cs" />
     <Compile Include="Elements\Inverter.cs" />
     <Compile Include="Elements\Register.cs" />
     <Compile Include="Elements\Summator.cs" />
+    <Compile Include="Elements\Сonjunctor.cs" />
     <Compile Include="Machine.cs" />
     <Compile Include="Operation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
