--- a/discrete-machine/discrete-machine.csproj
+++ b/discrete-machine/discrete-machine.csproj
@@ -42,8 +42,10 @@
     <Compile Include="Abstract\IConnector.cs" />
     <Compile Include="Abstract\IElement.cs" />
     <Compile Include="Abstract\IOperation.cs" />
-    <Compile Include="ConditionalOperator.cs" />
+    <Compile Include="CyclogramElements\ConditionalStep.cs" />
     <Compile Include="Connector.cs" />
+    <Compile Include="CyclogramElements\OperationsStep.cs" />
+    <Compile Include="CyclogramElements\CyclogramStep.cs" />
     <Compile Include="Element.cs" />
     <Compile Include="Elements\Counter.cs" />
     <Compile Include="Elements\Disjunctor.cs" />
@@ -51,7 +53,6 @@
     <Compile Include="Elements\Register.cs" />
     <Compile Include="Elements\Summator.cs" />
     <Compile Include="Elements\Сonjunctor.cs" />
-    <Compile Include="GroupOperations.cs" />
     <Compile Include="Machine.cs" />
     <Compile Include="Operation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
