--- a/discrete-machine/discrete-machine.csproj
+++ b/discrete-machine/discrete-machine.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Operation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Wire.cs" />
-    <Compile Include="Сyclogram.cs" />
+    <Compile Include="Cyclogram.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
